--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,6 +2,7 @@
  <div class="container">
 	 <%= link_to 'Home', root_path, :class => "navbar-brand" %>
 	 <%= link_to 'Events', events_path, :class => "navbar-brand" %>
+	 <%= link_to 'Instructors', instructors_path, :class => "navbar-brand" %>
  </div>
 </div>
 
