create schedule draft and added bootstrap date picker

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,6 +3,7 @@
 	 <%= link_to 'Home', root_path, :class => "navbar-brand" %>
 	 <%= link_to 'Events', events_path, :class => "navbar-brand" %>
 	 <%= link_to 'Instructors', instructors_path, :class => "navbar-brand" %>
+	 <%= link_to 'Schedules', schedules_path, :class => "navbar-brand" %>
  </div>
 </div>
 
