--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -10,9 +10,13 @@
     <tr>
       <td><%= schedule.name %></td>
 	  <td><%= schedule.status %></td>
-	  <td><%= link_to 'Show', event_path(event) %></td>
-	  <td><%= link_to 'Edit', edit_event_path(event) %></td>
+	  <td><%= link_to 'Show', schedule_path(schedule) %></td>
 
+	  <% if schedule.status == 'draft'%>
+		  <td><%= link_to 'Edit', edit_schedule_path(schedule) %></td>		  
+		  <td><%= link_to 'Destroy', schedule_path(schedule),
+		                      method: :delete, data: { confirm: 'Are you sure?'} %></td>
+	  <% end %>	  
     </tr>
   <% end %>
 </table>
